--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Max Gilbreath</title>
+  <link rel="icon" href="cup-line.png">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>WIP</h1>
+<p>I'm hosted with GitHub Pages.<br>
+  If you're here for csci 360 project files, you can find them here.<br>
+  <a href="https://maxgilbreath.github.io/csci340lab1/">Lab 1</a>
+
+
+
+
+</p>
 </body>
 </html>
