--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Max Gilbreath</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type= "image/png" href="images/cup-line.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!--<script src="my_jquery_functions.js"></script> This'll keep jqueries separate and easy to manage-->
