--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+  <!--What are you looking at?-->
 <html>
 <head>
   <title>Max Gilbreath</title>
@@ -18,12 +19,14 @@
     </script>
 </head>
 <body>
-<h1>WIP</h1>
-<p>I'm hosted with GitHub Pages.<br>
+<h1>Maxwell Gilbreath</h1>
+<p>I'm hosted with GitHub Pages, but hopefully migrating to a personal server soon!<br>
+  Everything here is intensely WIP, but feel free to look around!<br>
   Type the full word "cat" to win a prize here! ->
   <input type="text" name="Win something!"><br>
-  <div id="flip">If you're here for csci 360 project files, click here</div>
-  <div id="panel"><a href="https://maxgilbreath.github.io/csci340lab1/">Lab 1</a></div>
+  <div id="flip">If you're here for csci 340 project files, click here</div>
+  <div id="panel"><a href="https://maxgilbreath.github.io/csci340lab1/">Lab 1</a><br><br>
+    <a href="https://maxgilbreath.github.io/csci340lab2/">Lab 2</a></div>
 
 
 
