--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
   <link rel="icon" type= "image/png" href="images/cup-line.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!--<script src="my_jquery_functions.js"></script> This'll keep jqueries separate and easy to manage-->
-  <script>
-    $(document).ready(function(){
-      $("input").keypress(function(){
-        $(this).hide();
-       });
-      $("#flip").click(function(){
-        $("#panel").slideToggle("slow");
-     });
-    });
-    </script>
+
 </head>
 <body>
 <h1>Maxwell Gilbreath</h1>
@@ -27,10 +18,8 @@
   <div id="flip">If you're here for csci 340 project files, click here</div>
   <div id="panel"><a href="https://maxgilbreath.github.io/csci340lab1/">Lab 1</a><br><br>
     <a href="https://maxgilbreath.github.io/csci340lab2/">Lab 2</a></div>
-
-
-
-
 </p>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
