Fixed broken link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   Everything here is intensely WIP, but feel free to look around!<br>
   Type the full word "cat" to win a prize here! ->
   <input type="text" name="Win something!"><br>
-  <a href="https://https://maxgilbreath.github.io/blog/">Test Blog!</a><br>
+  <a href="https://maxgilbreath.github.io/blog/">Test Blog!</a><br>
   <div id="flip">If you're here for csci 340 project files, click here</div>
   <div id="panel"><a href="https://maxgilbreath.github.io/csci340lab1/">Lab 1</a><br><br>
     <a href="https://maxgilbreath.github.io/csci340lab2/">Lab 2</a></div>
