Updated ducks to cars and fixed json queries

--- a/csci340lab2/index.html
+++ b/csci340lab2/index.html
@@ -13,21 +13,21 @@
     <!-- Learned from https://www.tutorialspoint.com/How-to-set-background-color-in-HTML
           as an alternative to setting the background of each indiviual css element.-->
     <div id="intro" class="col-6">
-      <h1>Name A Duck!</h1>  
+      <h1>Name A Car!</h1>  
       <p>
-        Here's your duck!<br>
+        Here's your car!<br>
         <div class="col-lg-12">
           <img id="duck" src="images/blank.jpg" alt="oh no" width="450">
         </div>
         Give them a name, and we'll give you their age!<br>
-        <input type = "input" class="utext" name="name"><br><br>
-        <button id = "name" type = "button" class="name">Name Them!</button>
+        <input type = "input" class="utext" id = "username"><br><br>
+        <button id = "name" type = "button" >Name Them!</button>
       </p>
       <p class="test">
       </p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
