--- a/index.html
+++ b/index.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
-  <!--What are you looking at?-->
-<html>
-<head>
-  <title>Max Gilbreath</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type= "image/png" href="images/cup-line.png">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!--<script src="my_jquery_functions.js"></script> This'll keep jqueries separate and easy to manage-->
-
+<html lang="en">
+<head> <!--This is the head, containing the title and meta tags-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>TownHome</title>
+    <meta name="description" content="<meta name="description" content="TOWN brings quality, style and the wish for good fortune
+    to all of our guests. We provide a high-end experience through Chinese cuisine. ">
+    <meta name="keywords" content="Chinese Cuisine, high-end, food,
+    Chinese recipes, menus, location"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-<h1>Maxwell Gilbreath</h1>
-<p>I'm hosted with GitHub Pages, but hopefully migrating to a personal server soon!<br>
-  Everything here is intensely WIP, but feel free to look around!<br>
-  Type the full word "cat" to win a prize here! ->
-  <input type="text" name="Win something!"><br>
-  <a href="https://maxgilbreath.github.io/blog/">Test Blog!</a><br>
-  <div id="flip">If you're here for csci 340 project files, click here</div>
-  <div id="panel"><a href="https://maxgilbreath.github.io/csci340lab1/">Lab 1</a><br><br>
-    <a href="https://maxgilbreath.github.io/csci340lab2/">Lab 2</a></div>
-</p>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="script.js"></script>
+
+<body> <!--This is the body, containing the text for the site-->
+
+    <h> <!--Heading for the following paragraph-->
+    Mission Statement:
+    </h>
+
+    <p><!--Paragraph tag containing paragraph text-->
+            To bring quality, style and the wish for good fortune
+            to all of our guests. We provide a high-end experience
+            through Chinese cuisine.
+    </p>
+
+    <h> <!--Heading for the following paragraph-->
+    Vision    
+    </h>
+
+    <p><!--Paragraph tag containing paragraph text-->
+            TOWN combines a variety of chinese cuisine
+            to excite and delight our customers.
+            Our vision for the future is to create
+            experiential dining that is more than just
+            a night out. We aim to bring quality and
+            luxury across all aspects of our brand.
+            The approach of TOWN is to develop our
+            brand with the understanding of both our
+            culture and consumer insights. Within our
+            vision always lives the promise of inspiring
+            creativity, conversation and quality.
+            Our audience is a high-end clientele who
+            values a dining experience. The age range
+            of our customers are from early 30s-60s.
+            We would like them to come back for both
+            personal dining and events. 
+    </p>
+
 </body>
+
 </html>
