--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head> <!--This is the head, containing the title and meta tags-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,9 +15,9 @@
 
 <body> <!--This is the body, containing the text for the site-->
 
-    <h> <!--Heading for the following paragraph-->
+    <h1> <!--Heading for the following paragraph-->
     Mission Statement:
-    </h>
+    </h1>
 
     <p><!--Paragraph tag containing paragraph text-->
             To bring quality, style and the wish for good fortune
@@ -23,9 +25,9 @@
             through Chinese cuisine.
     </p>
 
-    <h> <!--Heading for the following paragraph-->
-    Vision    
-    </h>
+    <h2> <!--Heading for the following paragraph-->
+    <b>Vision</b><!--Bolded heading for emphasis-->    
+    </h2>
 
     <p><!--Paragraph tag containing paragraph text-->
             TOWN combines a variety of chinese cuisine
@@ -40,10 +42,14 @@
             vision always lives the promise of inspiring
             creativity, conversation and quality.
             Our audience is a high-end clientele who
-            values a dining experience. The age range
-            of our customers are from early 30s-60s.
-            We would like them to come back for both
-            personal dining and events. 
+            values a dining experience. 
+            
+            <blockquote><!--Blockquote containing text for emphasis-->
+                The age range of our customers are from early 30s-60s.
+                We would like them to come back for both
+                personal dining and events.
+            </blockquote> 
+
     </p>
 
 </body>
