--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="Chinese Cuisine, high-end, food,
     Chinese recipes, menus, location"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 
 <body> <!--This is the body, containing the text for the site-->
