--- a/index.html
+++ b/index.html
@@ -16,8 +16,22 @@
 
 <body> <!--This is the body, containing the text for the site-->
 
+    <wrapper>
+
+    <figure>
+        <img src="tw1.png" alt="Town logo"/> 
+    </figure>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Locations</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+    </nav> 
     <h1> <!--Heading for the following paragraph-->
-    Mission Statement:
+    Mission Statement
     </h1>
 
     <p><!--Paragraph tag containing paragraph text-->
@@ -26,8 +40,12 @@
             through Chinese cuisine.
     </p>
 
+
+
     <h2> <!--Heading for the following paragraph-->
-    <b>Vision</b><!--Bolded heading for emphasis-->    
+
+    <b>Vision</b><!--Bolded heading for emphasis-->   
+
     </h2>
 
     <p><!--Paragraph tag containing paragraph text-->
@@ -52,6 +70,12 @@
             </blockquote> 
 
     </p>
+ 
+    <footer>
+        <p>Copyright &copy; Town</p>
+    </footer> 
+
+    </wrapper> 
 
 </body>
 
