--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <wrapper>
 
     <figure>
-        <img src="tw1.png" alt="Town logo"/> 
+        <img src="images/tw1.png" alt="Town logo"/> 
     </figure>
     <nav>
         <ul>
