--- a/index.html
+++ b/index.html
@@ -2,81 +2,86 @@
 
 <html lang="en">
 
-<head> <!--This is the head, containing the title and meta tags-->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>TownHome</title>
-    <meta name="description" content="<meta name="description" content="TOWN brings quality, style and the wish for good fortune
-    to all of our guests. We provide a high-end experience through Chinese cuisine. ">
-    <meta name="keywords" content="Chinese Cuisine, high-end, food,
-    Chinese recipes, menus, location"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css"> 
-</head>
-
-<body> <!--This is the body, containing the text for the site-->
+    <head> <!--This is the head, containing the title and meta tags-->
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>TownHome</title>
+        <meta name="description" content="<meta name="description" content="TOWN brings quality, style and the wish for good fortune
+        to all of our guests. We provide a high-end experience through Chinese cuisine.">
+        <meta name="keywords" content="Chinese Cuisine, high-end, food,
+        Chinese recipes, menus, location"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    </head>
 
     <wrapper>
 
-    <figure>
-        <img src="images/tw1.png" alt="Town logo" class="center"> 
-    </figure>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Locations</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-    </nav> 
-    <h1> <!--Heading for the following paragraph-->
-    Mission Statement
-    </h1>
+        <body> <!--This is the body, containing the text for the site-->
 
-    <p><!--Paragraph tag containing paragraph text-->
-            To bring quality, style and the wish for good fortune
-            to all of our guests. We provide a high-end experience
-            through Chinese cuisine.
-    </p>
+            <figure>
+                <img src="images/tw1.png" alt="Town logo" class="center"> 
+            </figure>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Locations</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav> 
+            <h1> <!--Heading for the following paragraph-->
+            Mission Statement
+            </h1>
+
+            <p><!--Paragraph tag containing paragraph text-->
+                    To bring quality, style and the wish for good fortune
+                    to all of our guests. We provide a high-end experience
+                    through Chinese cuisine.
+            </p>
 
 
 
-    <h2> <!--Heading for the following paragraph-->
+            <h2> <!--Heading for the following paragraph-->
 
-    <b>Vision</b><!--Bolded heading for emphasis-->   
+            <b>Vision</b><!--Bolded heading for emphasis-->   
 
-    </h2>
+            </h2>
 
-    <p><!--Paragraph tag containing paragraph text-->
-            TOWN combines a variety of chinese cuisine
-            to excite and delight our customers.
-            Our vision for the future is to create
-            experiential dining that is more than just
-            a night out. We aim to bring quality and
-            luxury across all aspects of our brand.
-            The approach of TOWN is to develop our
-            brand with the understanding of both our
-            culture and consumer insights. Within our
-            vision always lives the promise of inspiring
-            creativity, conversation and quality.
-            Our audience is a high-end clientele who
-            values a dining experience. 
-            
-            <blockquote><!--Blockquote containing text for emphasis-->
-                The age range of our customers are from early 30s-60s.
-                We would like them to come back for both
-                personal dining and events.
-            </blockquote> 
+            <p><!--Paragraph tag containing paragraph text-->
+                    TOWN combines a variety of chinese cuisine
+                    to excite and delight our customers.
+                    Our vision for the future is to create
+                    experiential dining that is more than just
+                    a night out. We aim to bring quality and
+                    luxury across all aspects of our brand.
+                    The approach of TOWN is to develop our
+                    brand with the understanding of both our
+                    culture and consumer insights. Within our
+                    vision always lives the promise of inspiring
+                    creativity, conversation and quality.
+                    Our audience is a high-end clientele who
+                    values a dining experience. 
+                    
+                    <blockquote><!--Blockquote containing text for emphasis-->
+                        The age range of our customers are from early 30s-60s.
+                        We would like them to come back for both
+                        personal dining and events.
+                    </blockquote> 
+            </p>
 
-    </p>
- 
-    <footer>
-        <p>Copyright &copy; Town</p>
-    </footer> 
+            <footer>
+                <pf>Copyright &copy; Town</pf>
+            </footer> 
 
+            <b href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                    alt="Valid CSS!" />
+            </b>
+
+
+
+        </body>
     </wrapper> 
-
-</body>
-
 </html>
