--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <html lang="en">
 
     <head> <!--This is the head, containing the title and meta tags-->
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>TownHome</title>
-        <meta name="description" content="<meta name="description" content="TOWN brings quality, style and the wish for good fortune
+        <meta charset="UTF-8">
+        <meta name="description" content="TOWN brings quality, style and the wish for good fortune
         to all of our guests. We provide a high-end experience through Chinese cuisine.">
         <meta name="keywords" content="Chinese Cuisine, high-end, food,
         Chinese recipes, menus, location"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
     </head>
 
-    <wrapper>
+    <body> <!--This is the body, containing the text for the site-->
 
-        <body> <!--This is the body, containing the text for the site-->
+        <div id="wrapper">
 
             <figure>
                 <img src="images/tw1.png" alt="Town logo" class="center"> 
@@ -40,8 +40,6 @@
                     through Chinese cuisine.
             </p>
 
-
-
             <h2> <!--Heading for the following paragraph-->
 
             <b>Vision</b><!--Bolded heading for emphasis-->   
@@ -49,39 +47,39 @@
             </h2>
 
             <p><!--Paragraph tag containing paragraph text-->
-                    TOWN combines a variety of chinese cuisine
-                    to excite and delight our customers.
-                    Our vision for the future is to create
-                    experiential dining that is more than just
-                    a night out. We aim to bring quality and
-                    luxury across all aspects of our brand.
-                    The approach of TOWN is to develop our
-                    brand with the understanding of both our
-                    culture and consumer insights. Within our
-                    vision always lives the promise of inspiring
-                    creativity, conversation and quality.
-                    Our audience is a high-end clientele who
-                    values a dining experience. 
-                    
+                TOWN combines a variety of chinese cuisine
+                to excite and delight our customers.
+                Our vision for the future is to create
+                experiential dining that is more than just
+                a night out. We aim to bring quality and
+                luxury across all aspects of our brand.
+                The approach of TOWN is to develop our
+                brand with the understanding of both our
+                culture and consumer insights. Within our
+                vision always lives the promise of inspiring
+                creativity, conversation and quality.
+                Our audience is a high-end clientele who
+                values a dining experience. 
+            </p>
                     <blockquote><!--Blockquote containing text for emphasis-->
                         The age range of our customers are from early 30s-60s.
                         We would like them to come back for both
                         personal dining and events.
                     </blockquote> 
-            </p>
+
+
 
             <footer>
-                <pf>Copyright &copy; Town</pf>
+                <p>Copyright &copy; Town</p>
             </footer> 
 
-            <b href="http://jigsaw.w3.org/css-validator/check/referer">
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px"
                     src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                     alt="Valid CSS!" />
-            </b>
+            </a>
 
+        </div> 
+    </body>
 
-
-        </body>
-    </wrapper> 
 </html>
