--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="wrapper">
 
             <figure>
-                <img src="images/tw1.png" alt="Town logo" class="center"> 
+                <img src="images/TOWN_logo.png" alt="Town logo" class="center"> 
             </figure>
             <nav>
                 <ul>
