--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
     <head> <!--This is the head, containing the title and meta tags-->
-        <title>Town</title>
+        <title>About Us</title>
         <meta charset="UTF-8">
         <meta name="description" content="TOWN brings quality, style and the wish for good fortune
         to all of our guests. We provide a high-end experience through Chinese cuisine.">
@@ -13,7 +13,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
     </head>
-
     <body> <!--This is the body, containing the text for the site-->
 
         <div id="wrapper">
@@ -26,20 +25,35 @@
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav> 
-            <figure>
-                <img src="images/TOWN_logo.png" alt="Town logo" class="center" width = "750" height = "auto"> 
-            </figure>
-            <h1> <!--Heading for the following paragraph-->
-                Welcome to Town
-            </h1>
-            <figure>
-                <img src="images/titlefood.jpg" alt="Town logo" class="center" width = "750" height = "auto"> 
-            </figure>
+
+            <h2> <!--Heading for the following paragraph-->
+
+            <b>Vision</b><!--Bolded heading for emphasis-->   
+
+            </h2>
+
             <p><!--Paragraph tag containing paragraph text-->
-                    Our mission is to bring quality, style and the wish for good fortune
-                    to all of our guests. We provide a high-end experience
-                    through Chinese cuisine.
+                TOWN combines a variety of chinese cuisine
+                to excite and delight our customers.
+                Our vision for the future is to create
+                experiential dining that is more than just
+                a night out. We aim to bring quality and
+                luxury across all aspects of our brand.
+                The approach of TOWN is to develop our
+                brand with the understanding of both our
+                culture and consumer insights. Within our
+                vision always lives the promise of inspiring
+                creativity, conversation and quality.
+                Our audience is a high-end clientele who
+                values a dining experience. 
             </p>
+                    <blockquote><!--Blockquote containing text for emphasis-->
+                        The age range of our customers are from early 30s-60s.
+                        We would like them to come back for both
+                        personal dining and events.
+                    </blockquote> 
+
+
 
             <footer>
                 <p>Copyright &copy; Town</p>
