--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
     <head> <!--This is the head, containing the title and meta tags-->
-        <title>Town</title>
+        <title>Contact Us</title>
         <meta charset="UTF-8">
         <meta name="description" content="TOWN brings quality, style and the wish for good fortune
         to all of our guests. We provide a high-end experience through Chinese cuisine.">
@@ -13,7 +13,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
     </head>
-
     <body> <!--This is the body, containing the text for the site-->
 
         <div id="wrapper">
@@ -26,20 +25,29 @@
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav> 
-            <figure>
-                <img src="images/TOWN_logo.png" alt="Town logo" class="center" width = "750" height = "auto"> 
-            </figure>
-            <h1> <!--Heading for the following paragraph-->
-                Welcome to Town
-            </h1>
-            <figure>
-                <img src="images/titlefood.jpg" alt="Town logo" class="center" width = "750" height = "auto"> 
-            </figure>
+
+            <h2> <!--Heading for the following paragraph-->
+
+            <b>Contact Us</b><!--Bolded heading for emphasis-->   
+
+            </h2>
+
             <p><!--Paragraph tag containing paragraph text-->
-                    Our mission is to bring quality, style and the wish for good fortune
-                    to all of our guests. We provide a high-end experience
-                    through Chinese cuisine.
+                Phone: 800-111-8181<br><br>
+                Email: Town@gmail.com
+
             </p>
+            <p ><!--Paragraph tag containing paragraph text-->
+                <u>Hours</u><br>
+                    Mon: 8-9 <br>
+                    Tue: 8-9 <br>
+                    Wed: 8-9 <br>
+                    Thu: 8-9 <br>
+                    Fri: 8-9 <br>
+                    Sat: 10-11 <br>
+                    Sun: 10-5 <br>
+            </p>
+
 
             <footer>
                 <p>Copyright &copy; Town</p>
