--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
     <head> <!--This is the head, containing the title and meta tags-->
-        <title>Town</title>
+        <title>Menu</title>
         <meta charset="UTF-8">
         <meta name="description" content="TOWN brings quality, style and the wish for good fortune
         to all of our guests. We provide a high-end experience through Chinese cuisine.">
@@ -13,7 +13,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
     </head>
-
     <body> <!--This is the body, containing the text for the site-->
 
         <div id="wrapper">
@@ -26,20 +25,11 @@
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav> 
+
             <figure>
-                <img src="images/TOWN_logo.png" alt="Town logo" class="center" width = "750" height = "auto"> 
+                <img src="images/menu.png" alt="Menu" class="center" width = "750" height = "auto"> 
             </figure>
-            <h1> <!--Heading for the following paragraph-->
-                Welcome to Town
-            </h1>
-            <figure>
-                <img src="images/titlefood.jpg" alt="Town logo" class="center" width = "750" height = "auto"> 
-            </figure>
-            <p><!--Paragraph tag containing paragraph text-->
-                    Our mission is to bring quality, style and the wish for good fortune
-                    to all of our guests. We provide a high-end experience
-                    through Chinese cuisine.
-            </p>
+
 
             <footer>
                 <p>Copyright &copy; Town</p>
