--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,9 @@
 
             <p><!--Paragraph tag containing paragraph text-->
                 Phone: 800-111-8181<br><br>
-                Email: Town@gmail.com
+                Email: Town@gmail.com<br><br>
+                Instagram: instatown<br><br>
+                Twitter: @twittertown
 
             </p>
             <p ><!--Paragraph tag containing paragraph text-->
