--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
     <body> <!--This is the body, containing the text for the site-->
 
         <div id="wrapper">
-            <nav>
+            
+            <nav><!--Navbar containing all links-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
@@ -26,13 +27,13 @@
                 </ul>
             </nav> 
 
-            <h2> <!--Heading for the following paragraph-->
+            <h2> <!--Heading for the Vision paragraph-->
 
             <b>Vision</b><!--Bolded heading for emphasis-->   
 
             </h2>
 
-            <p><!--Paragraph tag containing paragraph text-->
+            <p><!--Vision paragraph text-->
                 TOWN combines a variety of chinese cuisine
                 to excite and delight our customers.
                 Our vision for the future is to create
@@ -47,7 +48,7 @@
                 Our audience is a high-end clientele who
                 values a dining experience. 
             </p>
-                    <blockquote><!--Blockquote containing text for emphasis-->
+                    <blockquote><!--Small vision side note-->
                         The age range of our customers are from early 30s-60s.
                         We would like them to come back for both
                         personal dining and events.
@@ -55,7 +56,7 @@
 
 
 
-            <footer>
+            <footer><!--Copyright Footer-->
                 <p>Copyright &copy; Town</p>
             </footer> 
 
@@ -66,6 +67,7 @@
             </a>
 
         </div> 
+
     </body>
 
 </html>
