--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,8 @@
     <body> <!--This is the body, containing the text for the site-->
 
         <div id="wrapper">
-            <nav>
+            
+            <nav><!--Navbar containing all links-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
@@ -26,21 +27,21 @@
                 </ul>
             </nav> 
 
-            <h2> <!--Heading for the following paragraph-->
+            <h2> <!--Heading for the contact information paragraph-->
 
             <b>Contact Us</b><!--Bolded heading for emphasis-->   
 
             </h2>
 
-            <p><!--Paragraph tag containing paragraph text-->
-                Phone: 800-111-8181<br><br>
-                Email: Town@gmail.com<br><br>
-                Instagram: instatown<br><br>
-                Twitter: @twittertown
+            <p><!--Contact information text-->
+                <b>Phone:</b> 800-111-8181<br><br>
+                <b>Email:</b> Town@gmail.com<br><br>
+                <b>Instagram:</b> instatown<br><br>
+                <b>Twitter:</b> @twittertown
 
             </p>
-            <p ><!--Paragraph tag containing paragraph text-->
-                <u>Hours</u><br>
+            <p ><!--Hours information-->
+                <b><u>Hours</u></b><br>
                     Mon: 8-9 <br>
                     Tue: 8-9 <br>
                     Wed: 8-9 <br>
@@ -51,7 +52,7 @@
             </p>
 
 
-            <footer>
+            <footer><!--Copyright Footer-->
                 <p>Copyright &copy; Town</p>
             </footer> 
 
@@ -62,6 +63,7 @@
             </a>
 
         </div> 
+
     </body>
 
 </html>
