--- a/locations.html
+++ b/locations.html
@@ -16,7 +16,8 @@
     <body> <!--This is the body, containing the text for the site-->
 
         <div id="wrapper">
-            <nav>
+
+            <nav><!--Navbar containing all links-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
@@ -25,32 +26,37 @@
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav> 
-
-            <h2> <!--Heading for the following paragraph-->
+            <br><br>
+            <aside class="sidebar">
+                <div id="location_img">
+                       <img src="images/location.jpg" alt="Sign for Town restaurant">
+                    </div>
+                </aside> 
+            <h2> <!--Heading for the location information-->
 
             <b>Our Locations</b><!--Bolded heading for emphasis-->   
 
             </h2>
 
-            <p ><!--Paragraph tag containing paragraph text-->
+            <p ><!--Alaska locations-->
                 <u>Alaska</u><br>
                     807 Blackwell Street <br>
                     1093 Lindale Avenue <br>
             </p>
 
-            <p ><!--Paragraph tag containing paragraph text-->
+            <p ><!--California location-->
                 <u>California</u><br>
                     1252 Pickens Way <br>
             </p>
 
-            <p ><!--Paragraph tag containing paragraph text-->
+            <p ><!--Michigan locations-->
                 <u>Michigan</u><br>
                     4214 Mount Street <br>
                     2281 Ocala Street <br>
                     523 Redbud Drive <br>
             </p>
 
-            <footer>
+            <footer><!--Copyright Footer-->
                 <p>Copyright &copy; Town</p>
             </footer> 
 
@@ -61,6 +67,7 @@
             </a>
 
         </div> 
+
     </body>
 
 </html>
