--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,8 @@
     <body> <!--This is the body, containing the text for the site-->
 
         <div id="wrapper">
-            <nav>
+
+            <nav><!--Navbar containing all links-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
@@ -25,13 +26,30 @@
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav> 
-
+            <h2> <!--Heading for the menu-->
+                <br><br>
+                <b>Our Menu</b><!--Bolded heading for emphasis-->   
+    
+                </h2>
             <figure>
-                <img src="images/menu.png" alt="Menu" class="center" width = "750" height = "auto"> 
+                <img src="images/menu.png" alt="
+                Appetizers: 
+                Fresh Spring Rolls 8
+                Dumplings 13
+                Steamed Pork Buns 8
+                Crab Rangoon 9
+                Pot Stickers 12
+                Entrees:
+                Ma Po Tofu 8
+                Dim Sum 13
+                Kung Pao Chicken 8
+                Char Siu 9
+                Hot Pot 12
+                " class="center" width = "750"> 
+                <br><br>
             </figure>
 
-
-            <footer>
+            <footer><!--Copyright Footer-->
                 <p>Copyright &copy; Town</p>
             </footer> 
 
@@ -42,6 +60,7 @@
             </a>
 
         </div> 
+
     </body>
 
 </html>
