--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
     </head>
 
-    <body> <!--This is the body, containing the text for the site-->
+    <body> <!--This is the body, containing the text for this webpage-->
 
         <div id="wrapper">
-            <nav>
+
+            <nav><!--Navbar containing all links-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
@@ -26,22 +27,26 @@
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav> 
+
             <figure>
-                <img src="images/TOWN_logo.png" alt="Town logo" class="center" width = "750" height = "auto"> 
+                <img src="images/TOWN_logo.png" alt="Town logo" class="center" width = "750"> 
             </figure>
-            <h1> <!--Heading for the following paragraph-->
+
+            <h1> <!--Heading for the mission statement paragraph-->
                 Welcome to Town
             </h1>
-            <figure>
-                <img src="images/titlefood.jpg" alt="Town logo" class="center" width = "750" height = "auto"> 
+
+            <figure><!--Food image for index page-->
+                <img class="round" src="images/titlefood.jpg" alt="Image of Chinese cuisine Town offers" width = "750" height = "450"> 
             </figure>
-            <p><!--Paragraph tag containing paragraph text-->
+
+            <p class = "index_statement"><!--Mission statement paragraph-->
                     Our mission is to bring quality, style and the wish for good fortune
                     to all of our guests. We provide a high-end experience
                     through Chinese cuisine.
             </p>
 
-            <footer>
+            <footer><!--Copyright Footer-->
                 <p>Copyright &copy; Town</p>
             </footer> 
 
@@ -52,6 +57,7 @@
             </a>
 
         </div> 
+
     </body>
 
 </html>
