Removing previous project information (now in branch)

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <head> <!--This is the head, containing the title and meta tags-->
         <title>Town</title>
         <meta charset="UTF-8">
-        <meta name="description" content="TOWN brings quality, style and the wish for good fortune
-        to all of our guests. We provide a high-end experience through Chinese cuisine.">
-        <meta name="keywords" content="Chinese Cuisine, high-end, food,
-        Chinese recipes, menus, location"> 
+        <meta name="description" content="A highly WIP personal site for professional development!! [and learning some basic front-end/react work]">
+        <meta name="keywords" content="blog, Max, Maxwell, Maxwell Gilbreath, Gilbreath, personal, personal site, resume"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
@@ -21,15 +19,13 @@
             <nav><!--Navbar containing all links-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="locations.html">Locations</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav> 
 
             <figure>
-                <img src="images/TOWN_logo.png" alt="Town logo" class="center" width = "750"> 
+                <img src="p1.png" alt="nothin" class="center" width = "750"> 
             </figure>
 
             <h1> <!--Heading for the mission statement paragraph-->
@@ -37,17 +33,15 @@
             </h1>
 
             <figure><!--Food image for index page-->
-                <img class="round" src="images/titlefood.jpg" alt="Image of Chinese cuisine Town offers" width = "750" height = "450"> 
+                <img class="round" src="p1.jpg" alt="Image" width = "750" height = "450"> 
             </figure>
 
             <p class = "index_statement"><!--Mission statement paragraph-->
-                    Our mission is to bring quality, style and the wish for good fortune
-                    to all of our guests. We provide a high-end experience
-                    through Chinese cuisine.
+                    lorem ipsum.
             </p>
 
             <footer><!--Copyright Footer-->
-                <p>Copyright &copy; Town</p>
+                <p>Copyright &copy; Me!</p>
             </footer> 
 
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
