--- a/about.html
+++ b/about.html
@@ -5,10 +5,8 @@
     <head> <!--This is the head, containing the title and meta tags-->
         <title>About Us</title>
         <meta charset="UTF-8">
-        <meta name="description" content="TOWN brings quality, style and the wish for good fortune
-        to all of our guests. We provide a high-end experience through Chinese cuisine.">
-        <meta name="keywords" content="Chinese Cuisine, high-end, food,
-        Chinese recipes, menus, location"> 
+        <meta name="description" content="A highly WIP personal site for professional development!! [and learning some basic front-end/react work]">
+        <meta name="keywords" content="blog, Max, Maxwell, Maxwell Gilbreath, Gilbreath, personal, personal site, resume"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
@@ -20,8 +18,6 @@
             <nav><!--Navbar containing all links-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="locations.html">Locations</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -34,30 +30,16 @@
             </h2>
 
             <p><!--Vision paragraph text-->
-                TOWN combines a variety of chinese cuisine
-                to excite and delight our customers.
-                Our vision for the future is to create
-                experiential dining that is more than just
-                a night out. We aim to bring quality and
-                luxury across all aspects of our brand.
-                The approach of TOWN is to develop our
-                brand with the understanding of both our
-                culture and consumer insights. Within our
-                vision always lives the promise of inspiring
-                creativity, conversation and quality.
-                Our audience is a high-end clientele who
-                values a dining experience. 
+                lorem ipsum. 
             </p>
                     <blockquote><!--Small vision side note-->
-                        The age range of our customers are from early 30s-60s.
-                        We would like them to come back for both
-                        personal dining and events.
+                        lorem ipsum.
                     </blockquote> 
 
 
 
             <footer><!--Copyright Footer-->
-                <p>Copyright &copy; Town</p>
+                <p>Copyright &copy; Me!</p>
             </footer> 
 
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
