--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,8 @@
     <head> <!--This is the head, containing the title and meta tags-->
         <title>Contact Us</title>
         <meta charset="UTF-8">
-        <meta name="description" content="TOWN brings quality, style and the wish for good fortune
-        to all of our guests. We provide a high-end experience through Chinese cuisine.">
-        <meta name="keywords" content="Chinese Cuisine, high-end, food,
-        Chinese recipes, menus, location"> 
+        <meta name="description" content="A highly WIP personal site for professional development!! [and learning some basic front-end/react work]">
+        <meta name="keywords" content="blog, Max, Maxwell, Maxwell Gilbreath, Gilbreath, personal, personal site, resume"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
@@ -20,8 +18,6 @@
             <nav><!--Navbar containing all links-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="locations.html">Locations</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -29,31 +25,21 @@
 
             <h2> <!--Heading for the contact information paragraph-->
 
-            <b>Contact Us</b><!--Bolded heading for emphasis-->   
+            <b>Contact Me</b><!--Bolded heading for emphasis-->   
 
             </h2>
 
             <p><!--Contact information text-->
                 <b>Phone:</b> 800-111-8181<br><br>
-                <b>Email:</b> Town@gmail.com<br><br>
-                <b>Instagram:</b> instatown<br><br>
-                <b>Twitter:</b> @twittertown
+                <b>Email:</b> @gmail.com<br><br>
+                <b>Instagram:</b> insta<br><br>
+                <b>Twitter:</b> @twitter
 
-            </p>
-            <p ><!--Hours information-->
-                <b><u>Hours</u></b><br>
-                    Mon: 8-9 <br>
-                    Tue: 8-9 <br>
-                    Wed: 8-9 <br>
-                    Thu: 8-9 <br>
-                    Fri: 8-9 <br>
-                    Sat: 10-11 <br>
-                    Sun: 10-5 <br>
             </p>
 
 
             <footer><!--Copyright Footer-->
-                <p>Copyright &copy; Town</p>
+                <p>Copyright &copy; Me!</p>
             </footer> 
 
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
