--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav> 
 
             <figure>
-                <img src="p1.png" alt="nothin" class="center" width = "750"> 
+                <img src="images/p1.png" alt="nothin" class="center" width = "750"> 
             </figure>
 
             <h1> <!--Heading for the mission statement paragraph-->
